# different_selectors

./: .env.local_litecart  .gitignore  config.py  pyproject.toml  summary.md
diff_selectors/utils/: path.py
tests/: conftest.py  test_litecart.py  test_litecart_css.py  test_litecart_selenium_webdriver.py  test_litecart_xpath.py
